added RandomEntityDrops for randomizer